feat:create a component for jion us section

--- a/views/service.html
+++ b/views/service.html
@@ -266,8 +266,9 @@
     </section>
 
     <section class="margin-section"></section>
-
+     <section class="jion-us-section"></section>
     <footer></footer>
+    <script type="module" src="/components/JionUsSection.js"></script>
     <script type="module" src="/components/workExamples.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
