feat:complete designing  project page

--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
     width: 1210px;
   }
 }
+.scroll-none::-webkit-scrollbar {
+  display: none;
+}
 body::-webkit-scrollbar {
   display: none;
 }
