--- a/views/projects.html
+++ b/views/projects.html
@@ -6,9 +6,60 @@
     <title>Projects</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body>
-   <header></header>
-    <section class="banner">Our Projects</section>
+<body >
+   <ul class="transition">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
+   <header class="xl:w-[1210px] mx-auto">
+  <div class="mt-5 flex h-[50px] justify-between sm:mt-4 xsm:mt-2">
+    <div class="ml-3 flex items-center gap-1">
+      <img src="../assets/images/logos/Vector.png" alt="logo" class="sm:size-8 md:size-10 xl:size-12" />
+      <h1 class="xsm:font-DM-serif-Display text-3xlp text-black-light sm:mt-2 sm:text-2xlp xsm:mt-2 xsm:text-2xl">
+        SELHONO
+      </h1>
+    </div>
+    <nav class="flex items-center gap-3 xl:gap-12">
+      <ul class="hidden xl:mr-5 xl:flex xl:gap-12">
+        <li class="font-Jost text-xl font-medium">
+          <a href="/index.html" class="link">Home</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/service.html" class="link">Services</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/projects.html" class="link">Projects</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/about.html" class="link">About</a>
+        </li>
+        <li class="font-Jost text-xl font-medium">
+          <a href="/views/contact.html" class="link">Contact</a>
+        </li>
+      </ul>
+      <div>
+        <img src="../assets/images/icons/search.png" alt="search" class="md:mr-4" />
+      </div>
+      <img src="../assets/images/icons/menu.svg" alt="menu" class="mr-5 block size-6 md:mr-24 xl:hidden" />
+    </nav>
+  </div>
+</header>
+       <!--
+  ***************************
+  *     BANNER              *
+  ***************************
+-->
+   <section class="banner mt-6 sm:mt-10 md:mt-12 xl:mt-16">
+  <div class="relative h-36 w-screen bg-center bg-products-img sm:h-44 md:h-56 xl:h-64 2xl:h-[356px]">
+    <div class="absolute inset-0 h-full w-full bg-black-default bg-opacity-40 pt-16 sm:pt-20 md:pt-28 xl:pt-36 2xl:pt-44">
+      <h1 class="text-center font-DM-serif-Display text-3xlp text-white sm:text-6xl md:text-6xlp xl:text-7xl">Our Projects</h1>
+    </div>
+  </div>
+</section>
       <section class="mt-9 project-category">
        
     </section>
@@ -25,11 +76,12 @@
      </div>
     
     </section>
+    </main>
     <footer></footer>
   
   
-    <script type="module" src="/components/projectItemGenenrator.js"></script>
-    <script type="module" src="/components/categoryBar.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.js" defer></script>
+    <script type="module" src="/components/projectItemGenenrator.js" defer></script>
+    <script type="module" src="/components/categoryBar.js" defer></script>
 </body>
 </html>
