feat:add page transition to all pages
Add page transition to all pages .
Modify style.css class .transition to change color to white

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ html {
       display: flex;
     }
     .transition li {
-     background-color: wheat;
+     background-color: white;
      list-style: none;
      transform: scaleY(0);
      width: 20%;
