--- a/views/projects.html
+++ b/views/projects.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body >
+<body data-barba="wrapper">
    <ul class="transition">
     <li></li>
     <li></li>
@@ -48,6 +48,7 @@
     </nav>
   </div>
 </header>
+ <main data-barba="container">
        <!--
   ***************************
   *     BANNER              *
