--- a/views/service.html
+++ b/views/service.html
@@ -6,7 +6,7 @@
     <title>services</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body >
+  <body data-barba="wrapper" >
      <ul class="transition">
     <li></li>
     <li></li>
@@ -49,6 +49,7 @@
   </div>
 </header>
 
+<main data-barba="container">
        <!--
   ***************************
   *     BANNER              *
