--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ html {
   xl:py-6
  bg-orange-light
 }
+.btn-img {
+  @apply greyscale-100 ml-3 brightness-0 invert filter
+}
 }
 /* Page transitions */
 
