style:create arrow-right icon in about page
Utilize fontAwesome to create arrow-right icon in about page.
Also Replace img with this icon for better readibility.

--- a/views/about.html
+++ b/views/about.html
@@ -125,7 +125,7 @@
           </p>
 
           <button class=" button-black mx-auto mt-6 xl:ml-12 xl:mt-10">
-            Our Concept
+            Our Concept <i class="fa-solid fa-arrow-right ml-3"></i>
           </button>
         </div>
       </div>
@@ -165,7 +165,7 @@
           <button
             class="button-black relative z-10 mx-auto mt-6 xl:ml-12 xl:mt-10"
           >
-            Our Portfolio
+            Our Portfolio <i class="fa-solid fa-arrow-right ml-3"></i>
           </button>
         </div>
       </div>
@@ -365,11 +365,7 @@
       </div>
       <button class="button-black mx-auto mt-10">
         Send Now
-        <img
-          src="../assets/images/icons/arrow.png"
-          alt="image"
-          class="grayscale-100 ml-3 brightness-0 invert filter"
-        />
+      <i class="fa-solid fa-arrow-right ml-3"></i>
       </button>
     </section>
     </main>
