perf:remove js and utilize html for creating workExamples element
Removing all script and files that generate code for workExamples class.
Increasing performance of loading service page workExamples with barba js.

--- a/views/service.html
+++ b/views/service.html
@@ -224,18 +224,81 @@
       </p>
 
       <!-- How do we Work examples -->
+<div class="work-examples">
+  <!-- Example 1 -->
+  <div class="mx-1 mt-8 flex flex-col justify-center gap-4 overflow-hidden sm:mt-16 sm:flex-row sm:gap-4 md:gap-20 md:mt-20 lg:gap-24 lg:mt-44">
+    <img src="/assets/images/backgrounds/Rectangle 21.png" class="hidden w-[250px] object-contain sm:block md:w-[300px] lg:w-[480px] xl:w-[625px] xl:h-[485px]">
+    <div class="bg-image h-[120px] w-screen bg-orange-light bg-cover bg-center bg-no-repeat sm:hidden" style="background-image: url('/assets/images/backgrounds/Rectangle 21.png');">
+           <div class="h-[120px] w-full bg-black-default bg-opacity-30">
+        <h1 class="relative left-2/3 font-DM-serif-Display text-[90px] text-orange-bright">01</h1>
+      </div>
+    </div>
+    <div class="mx-auto w-[320px] rounded-3xl bg-transparent p-4 sm:mx-0 xsm:w-[280px] xsm:pl-2">
+      <h1 class="relative left-3/4 font-DM-serif-Display text-[90px] text-orange-bright sm:text-5xl md:text-7xl lg:text-[90px] hidden sm:block">01</h1>
+      <div class="mt-2 sm:mt-4 lg:mt-24 xl:mt-[150px]">
+        <h1 class="font-DM-serif-Display text-2xlp text-black-dark md:text-4xl">Concept & Details</h1>
+        <p class="font-Jost text-lg text-black-light sm:text-xl md:text-xlp">Our interior design website offers expert guidance and inspiration for creating stylish and functional environments.</p>
+      </div>
+    </div>
+  </div>
 
-     <div class="work-examples"></div>
+  <!-- Example 2 -->
+  <div class="mx-1 mt-8 flex flex-col justify-center gap-4 overflow-hidden sm:mt-16 sm:flex-row-reverse sm:gap-4 md:gap-20 md:mt-20 lg:gap-24 lg:mt-44">
+    <img src="/assets/images/backgrounds/Rectangle 22.png" class="hidden w-[250px] object-contain sm:block md:w-[300px] lg:w-[480px] xl:w-[625px] xl:h-[485px]">
+    <div class="bg-image h-[120px] w-screen bg-orange-light bg-cover bg-center bg-no-repeat sm:hidden" style="background-image: url('/assets/images/backgrounds/Rectangle 22.png');">
+          <div class="h-[120px] w-full bg-black-default bg-opacity-30">
+        <h1 class="relative left-2/3 font-DM-serif-Display text-[90px] text-orange-bright">02</h1>
+      </div>
+    </div>
+    <div class="mx-auto w-[320px] rounded-3xl bg-transparent p-4 sm:mx-0 xsm:w-[280px] xsm:pl-2">
+      <h1 class="relative left-0 font-DM-serif-Display text-[90px] text-orange-bright sm:text-5xl md:text-7xl lg:text-[90px] hidden sm:block">02</h1>
+      <div class="mt-2 sm:mt-4 lg:mt-24 xl:mt-[150px]">
+        <h1 class="font-DM-serif-Display text-2xlp text-black-dark md:text-4xl">Idea for Work</h1>
+        <p class="font-Jost text-lg text-black-light sm:text-xl md:text-xlp">Transforming interior design with an intuitive online platform for seamless collaboration and visualization.</p>
+      </div>
+    </div>
+  </div>
 
+  <!-- Example 3 -->
+  <div class="mx-1 mt-8 flex flex-col justify-center gap-4 overflow-hidden sm:mt-16 sm:flex-row sm:gap-4 md:gap-20 md:mt-20 lg:gap-24 lg:mt-44">
+    <img src="/assets/images/backgrounds/Rectangle 23.png" class="hidden w-[250px] object-contain sm:block md:w-[300px] lg:w-[480px] xl:w-[625px] xl:h-[485px]">
+    <div class="bg-image h-[120px] w-screen bg-orange-light bg-cover bg-center bg-no-repeat sm:hidden" style="background-image: url('/assets/images/backgrounds/Rectangle 23.png');">
+         <div class="h-[120px] w-full bg-black-default bg-opacity-30">
+        <h1 class="relative left-2/3 font-DM-serif-Display text-[90px] text-orange-bright">03</h1>
+      </div>
+    </div>
+    <div class="mx-auto w-[320px] rounded-3xl bg-transparent p-4 sm:mx-0 xsm:w-[280px] xsm:pl-2">
+      <h1 class="relative left-3/4 font-DM-serif-Display text-[90px] text-orange-bright sm:text-5xl md:text-7xl lg:text-[90px] hidden sm:block">03</h1>
+      <div class="mt-2 sm:mt-4 lg:mt-24 xl:mt-[150px]">
+        <h1 class="font-DM-serif-Display text-2xlp text-black-dark md:text-4xl">Design</h1>
+        <p class="font-Jost text-lg text-black-light sm:text-xl md:text-xlp">Creating functional yet stunning interiors, marrying form and function with innovative spatial solutions.</p>
+      </div>
+    </div>
+  </div>
 
+  <!-- Example 4 -->
+  <div class="mx-1 mt-8 flex flex-col justify-center gap-4 overflow-hidden sm:mt-16 sm:flex-row-reverse sm:gap-4 md:gap-20 md:mt-20 lg:gap-24 lg:mt-44">
+    <img src="/assets/images/backgrounds/Rectangle 24.png" class="hidden w-[250px] object-contain sm:block md:w-[300px] lg:w-[480px] xl:w-[625px] xl:h-[485px]">
+    <div class="bg-image h-[120px] w-screen bg-orange-light bg-cover bg-center bg-no-repeat sm:hidden" style="background-image: url('/assets/images/backgrounds/Rectangle 24.png');">
+      <div class="h-[120px] w-full bg-black-default bg-opacity-30">
+        <h1 class="relative left-2/3 font-DM-serif-Display text-[90px] text-orange-bright">04</h1>
+      </div>
+    </div>
+    <div class="mx-auto w-[320px] rounded-3xl bg-transparent p-4 sm:mx-0 xsm:w-[280px] xsm:pl-2">
+      <h1 class="relative left-0 font-DM-serif-Display text-[90px] text-orange-bright sm:text-5xl md:text-7xl lg:text-[90px] hidden sm:block">04</h1>
+      <div class="mt-2 sm:mt-4 lg:mt-24 xl:mt-[150px]">
+        <h1 class="font-DM-serif-Display text-2xlp text-black-dark md:text-4xl">Perfection</h1>
+        <p class="font-Jost text-lg text-black-light sm:text-xl md:text-xlp">Perfection is our ethos, manifested through meticulous attention to detail and unwavering commitment to excellence.</p>
+      </div>
+    </div>
+  </div>
+</div>
     </section>
-
   
      <section class="jion-us-section"></section>
      </main>
     <footer></footer>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/components/JionUsSection.js"></script>
-    <script type="module" src="/components/workExamples.js"></script>
   </body>
 </html>
