--- a/views/projects.html
+++ b/views/projects.html
@@ -65,7 +65,108 @@
        
     </section>
    
-    <section class="mt-9 project-items "></section>
+ <section class="project-items mt-9">
+     <div
+        class="mx-auto mt-12 grid w-[340px] grid-cols-1 gap-12 sm:w-11/12 sm:grid-cols-2 sm:gap-16 xl:mt-28 xl:gap-28 xsm:w-[300px]"
+      >
+        <div>
+          <img
+            src="/assets/images/backgrounds/Rectangle 27.png"
+            alt="Rectangle 4"
+          />
+          <div class="mt-3 flex">
+            <div>
+              <h1 class="font-DM-serif-Display text-2xl text-black-dark">
+                Modern bedroom
+              </h1>
+              <p class="font-Jost text-xlp text-black-light">
+                Decor / Artchitecture
+              </p>
+            </div>
+            <div
+              class="ml-auto grid size-[70px] place-content-center rounded-full "
+            >
+              <img
+                src="/assets/images/icons/arrowArticle.png"
+                alt="ArrowRight"
+              />
+            </div>
+          </div>
+        </div>
+        <div>
+          <img
+            src="/assets/images/backgrounds/Rectangle 28.png"
+            alt="Rectangle 4"
+          />
+          <div class="mt-3 flex">
+            <div>
+              <h1 class="font-DM-serif-Display text-2xl text-black-dark">
+                Modern bedroom
+              </h1>
+              <p class="font-Jost text-xlp text-black-light">
+                Decor / Artchitecture
+              </p>
+            </div>
+            <div
+              class="ml-auto grid size-[70px] place-content-center rounded-full"
+            >
+              <img
+                src="/assets/images/icons/arrowArticle.png"
+                alt="ArrowRight"
+              />
+            </div>
+          </div>
+        </div>
+        <div>
+          <img
+            src="/assets/images/backgrounds/Rectangle 29.png"
+            alt="Rectangle 4"
+          />
+          <div class="mt-3 flex">
+            <div>
+              <h1 class="font-DM-serif-Display text-2xl text-black-dark">
+                Modern bedroom
+              </h1>
+              <p class="font-Jost text-xlp text-black-light">
+                Decor / Artchitecture
+              </p>
+            </div>
+            <div
+              class="ml-auto grid size-[70px] place-content-center rounded-full"
+            >
+              <img
+                src="/assets/images/icons/arrowArticle.png"
+                alt="ArrowRight"
+              />
+            </div>
+          </div>
+        </div>
+        <div>
+          <img
+            src="/assets/images/backgrounds/Rectangle 30.png"
+            alt="Rectangle 8"
+          />
+          <div class="mt-3 flex">
+            <div>
+              <h1 class="font-DM-serif-Display text-2xl text-black-dark">
+                Modern bedroom
+              </h1>
+              <p class="font-Jost text-xlp text-black-light">
+                Decor / Artchitecture
+              </p>
+            </div>
+            <div
+              class="ml-auto grid size-[70px] place-content-center rounded-full"
+            >
+              <img
+                src="/assets/images/icons/arrowArticle.png"
+                alt="ArrowRight"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> 
       <section class="mt-28 ">
      <div class="flex gap-5 mx-auto w-[266px]">
       <div class="rounded-full grid place-content-center bg-black-lighest size-12">01</div>
@@ -82,7 +183,6 @@
   
   
     <script type="module" src="/main.js" defer></script>
-    <script type="module" src="/components/projectItemGenenrator.js" defer></script>
     <script type="module" src="/components/categoryBar.js" defer></script>
 </body>
 </html>
