fix:resolve categoryBar not showing after transition to projects page

--- a/views/projects.html
+++ b/views/projects.html
@@ -62,7 +62,15 @@
   </div>
 </section>
       <section class="mt-9 project-category">
-       
+       <div class="project-category">
+  <div class="flex border border-orange-light rounded-xl mx-auto w-[266px] sm:w-[590px] lg:w-[834.2px] h-[75px] overflow-auto scroll-none">
+    <button class="btn font-Jost text-lg font-semibold text-black-dark py-auto sm:px-[66px] px-[32px] rounded-xl whitespace-nowrap">Bathroom</button>
+    <button class="btn font-Jost text-lg font-semibold text-black-dark py-auto sm:px-[66px] px-[32px] rounded-xl whitespace-nowrap bg-orange-light text-white">Bedroom</button>
+    <button class="btn font-Jost text-lg font-semibold text-black-dark py-auto sm:px-[66px] px-[32px] rounded-xl whitespace-nowrap">Kitchen</button>
+    <button class="btn font-Jost text-lg font-semibold text-black-dark py-auto sm:px-[66px] px-[32px] rounded-xl whitespace-nowrap">Living Room</button>
+  </div>
+</div>
+
     </section>
    
  <section class="project-items mt-9">
