refactor : remove unnecessary javascript files

--- a/views/projects.html
+++ b/views/projects.html
@@ -191,6 +191,6 @@
   
   
     <script type="module" src="/main.js" defer></script>
-    <script type="module" src="/components/categoryBar.js" defer></script>
+      <script type="module" src="/components/pageTransition.js" defer></script>
 </body>
 </html>
