--- a/views/about.html
+++ b/views/about.html
@@ -376,5 +376,6 @@
 -->
    <footer></footer>
      <script type="module" src="/main.js" ></script>
+       <script type="module" src="/components/pageTransition.js" defer></script>
   </body>
 </html>
