--- a/views/contact.html
+++ b/views/contact.html
@@ -148,8 +148,6 @@
     <footer></footer>
     
     <script type="module" src="/main.js" defer></script>
-    <script>
-      
-    </script>
+      <script type="module" src="/components/pageTransition.js" defer></script>
   </body>
 </html>
